tests/e2e/object_assign_null.error
Error: syntax error in story at line 2, column 5

2|        server = null
          ^^^^^^^^^^^^^

E0100: Can't assign `null` to `Object`
